Pushing aside width slightly further to prevent title from being cut off

--- a/assets/less/aec.less
+++ b/assets/less/aec.less
@@ -168,6 +168,7 @@ ul.aec-sidenav {
 
 .aside {
 	background: transparent;
+	min-width: 242px;
 	@media (min-width: @screen-lg-min) {
 		width: @aside-width-lg;
 		min-width: @aside-width-lg;
